# noah-np1500-lv_port_linux_frame_buffer

./: .gitignore  CMakeLists.txt  Makefile  lv_conf.h  lv_drv_conf.h  main.c  readme.md  xmake.lua
src/: demo1.c
